# cominder

./: .gitignore  .gitmodules  Cargo.toml
configs/: dashboard.yaml  deployment.yaml  dockerhub-cred.yaml  frontend.yaml  haproxy.yaml  hubble-ui-service.yaml  ingress.yaml  kubelet.yaml  namespace.yaml  nginx.yaml  service-app.yaml  service.yaml  sws.yaml
configs/prometheus/: prometheus-service.yaml
configs/sws/: sws.toml
images/dev/: building-front  frontend  static-serving  sws
images/dev/services/: users  users_dummy
scripts/: certs-secret.nu  deploy.nu  dockerhub-cred.nu  grafana.nu  haproxy.nu  init.nu  prometheus.nu  reset.nu  service-app.nu  service-app.yaml
services/messages/: Cargo.toml
services/messages/proto/: Cargo.toml  build.rs
services/messages/proto/src/: lib.rs
services/messages/proto/src/v1/: messages.proto
services/messages/src/: main.rs
services/messages/src/api/v1/: messages.rs
