[workspace]

members = [
    "services/users",
    "services/users/migration",
    "services/users/entities",
    "services/users/proto", 
    
    "civilization",
    "civilization/scopes_macro",

    "civilization/beijing",

    "civilization/moscow",
    "civilization/moscow/migrations",

    "services/frontend",

    "third-party/tonic-web-wasm-client"
]

resolver = "2"


[workspace.dependencies]
tokio = {version = "1.27", features = ["full"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
http = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sea-orm = { version = "0.11", features = ["runtime-tokio-rustls", "serde_json", "macros", "sqlx-postgres", "time"] }
serde = "1"
serde_json = "1"
validator = { version = "0.16", features = ["phone", "derive"]}
rand = "0.8"
time = { version = "0.3", features = ["serde-well-known"] }
uuid = { version = "1.1", features = ["v4", "fast-rng"] }
tonic = "0.9"
prost = "0.11"
tonic-build = "0.9"
tonic-web = "0.9"
lazy_static = "1.4"
hyper = "0.14"
futures = "0.3"
tower = "0.4"

[profile.release]
lto = true
opt-level = "s"